jalv (1.6.9) stable; urgency=medium

  * Switch to external zix dependency

 -- David Robillard <d@drobilla.net>  Wed, 16 Nov 2022 15:50:45 +0000

jalv (1.6.8) stable; urgency=medium

  * Add Gtk plugin selector UI and desktop file
  * Add missing option in console help output
  * Add version option to console executable
  * Build Qt interface as C++14
  * Change no-menu short option to m to avoid clash with jack-name
  * Clean up and modernize code
  * Fix "preset" console command when "presets" hasn't been called
  * Fix MSVC build
  * Fix atom buffer alignment
  * Fix crash when running jalv without arguments
  * Fix man page headers
  * Fix memory leaks
  * Fix outdated man pages
  * Fix spurious transport messages
  * Fix thread-safety of plugin/UI communication rings
  * Flush stdout after printing control values in console interface
  * Print status information consistently to stdout
  * Propagate worker errors to the scheduler when possible
  * Remove Gtkmm interface
  * Remove Qt4 support
  * Support both rdfs:label and lv2:name for port group labels
  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Sat, 10 Sep 2022 00:43:05 +0000

jalv (1.6.6) stable; urgency=medium

  * Add a command line argument to select a specific UI
  * Explicitly support lv2:inPlaceBroken
  * Ignore ports with nonsense lv2:control designations
  * Remove Jack session support
  * Support port events for ui:showInterface UIs

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 22:05:38 +0000

jalv (1.6.4) stable; urgency=medium

  * Support rdfs:label for port groups
  * Use screen refresh rate with Gtk3 and Qt5

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:56:49 +0000

jalv (1.6.2) stable; urgency=medium

  * Add jalv -i option to ignore stdin for background use
  * Add several commands to console interface
  * Add support for running as an internal Jack client (thanks Timo Wischer)