@@ -1,8 +1,9 @@
 jalv (1.6.9) stable; urgency=medium
 
+  * Build Qt UI with -fPIC
   * Switch to external zix dependency
 
- -- David Robillard <d@drobilla.net>  Wed, 16 Nov 2022 15:50:45 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 19 Nov 2022 10:51:27 +0000
 
 jalv (1.6.8) stable; urgency=medium
 
